name:                meowcats
version:             0.0.0
synopsis:            a moarcats clone
homepage:            https://github.com/AlephAlpha/meowcats
license:             MIT
author:              AlephAlpha
maintainer:          alephalpha911@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable           meowcats
    hs-source-dirs:  .
    main-is:         Main.hs
    ghc-options:     -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:      OverloadedStrings
    build-depends:   base >= 4.7 && < 5
                   , scotty
